sample apps/react-demo/k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: react-demo-ns
  name: react-demo
spec:
  selector:
    app: react-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
