sample apps/react-demo/k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: react-demo-ns
  name: react-demo
spec:
  rules:
    - host: react-demo.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-demo
                port:
                  number: 80
